Rust 2021-ify and winapi instead of hand-roll FFI

--- a/serial-core/Cargo.toml
+++ b/serial-core/Cargo.toml
@@ -10,6 +10,7 @@ license = "MIT"
 readme = "README.md"
 keywords = ["serial", "hardware", "system", "RS232"]
 categories = ["hardware-support"]
+edition = "2021"
 
 [dependencies]
 libc = "0.2"
